# opencoreConfiguratorOnline

./: .gitignore  README.en.md  README.md  data.json  gulpfile.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
.zed/: settings.json
assets/css/: ace.min.css  fonts.googleapis.com.css  jquery.autocompleter.css  jquery.minimalTips.css  toastr.min.css
assets/js/: jquery.autocomplete.min.js  jquery.format.js  jquery.jqGrid.min.js  jquery.minimalTips.min.js  opencore.min.js  toastr.min.js
assets/opencore/: comm.js  generatePlist.js  index.js  initGirdtable.js  lang-zh-CN.js  lang.js  plist_parser.js  tips_zh-CN.js
docs/: index.html
docs/assets/css/: opencore.min.css
docs/assets/js/: opencore.min.js  tauri.min.js
src/: index.html
src/assets/commjs/: jquery.jqGrid.min.js  jquery.minimalTips.min.js
src/assets/css/: ace.min.css
src/assets/opencorejs/: comm.js  generatePlist.js  index.js  initGirdtable.js  lang.js  ocefi.js  plist_parser.js  tauri.js  tips_zh-CN.js  vue_data.js
src/commjs/: grid.locale-cn.min.js  jquery.format.min.js  vue.min.js
src/opencorejs/: generatePlist.js  index.js  initGirdtable.js  lang.js  tips_zh-CN.js
tauriapp/: package-lock.json  package.json
tauriapp/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauriapp/src-tauri/capabilities/: default.json
tauriapp/src-tauri/src/: lib.rs  main.rs
utools/: index.html  plugin.json  preload.js
utools/assets/js/: opencore.min.js  tauri.min.js
